finished JavaFx and made some cleanup